p2_final_site/revature-alchemy-project-2/force-app/main/default/objects/BBTProduct__c/BBTProduct__c.object-meta.xml
<CustomObject>
    <label>BBT Product</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BBT Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>