p2_final_site/revature-alchemy-project-2/force-app/main/default/objects/BBTProduct__c/fields/BBTProductDescription__c.field-meta.xml
<CustomField>
    <fullName>BBTProductDescription__c</fullName>
    <description>BBT Product Description</description>
    <label>BBTProductDescription</label>
    <type>TextArea</type>
</CustomField>