p2_final_site/revature-alchemy-project-2/force-app/main/default/objects/BBTProduct__c/fields/Image_Alt_Tag__c.field-meta.xml
<CustomField>
    <fullName>Image_Alt_Tag__c</fullName>
    <label>Image Alt Tag</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>