p2_final_site/revature-alchemy-project-2/force-app/main/default/objects/BBTProduct__c/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <label>Image URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>