p2_final_site/revature-alchemy-project-2/force-app/main/default/objects/BBTProduct__c/fields/Product_Style__c.field-meta.xml
<CustomField>
    <fullName>Product_Style__c</fullName>
    <label>Product Style</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>mens</fullName>
                <default>true</default>
                <label>mens</label>
            </value>
            <value>
                <fullName>men</fullName>
            </value>
            <value>
                <fullName>men&apos;s</fullName>
            </value>
            <value>
                <fullName>man</fullName>
            </value>
            <value>
                <fullName>mans</fullName>
            </value>
            <value>
                <fullName>man&apos;s</fullName>
            </value>
            <value>
                <fullName>women</fullName>
            </value>
            <value>
                <fullName>womens</fullName>
            </value>
            <value>
                <fullName>woman</fullName>
            </value>
            <value>
                <fullName>womans</fullName>
            </value>
            <value>
                <fullName>woman&apos;s</fullName>
            </value>
            <value>
                <fullName>classic</fullName>
            </value>
            <value>
                <fullName>antique</fullName>
            </value>
            <value>
                <fullName>fancy</fullName>
            </value>
            <value>
                <fullName>digital</fullName>
            </value>
            <value>
                <fullName>analog</fullName>
            </value>
            <value>
                <fullName>analogue</fullName>
            </value>
            <value>
                <fullName>smart</fullName>
            </value>
            <value>
                <fullName>smart watch</fullName>
            </value>
            <value>
                <fullName>sports</fullName>
            </value>
            <value>
                <fullName>sport</fullName>
            </value>
            <value>
                <fullName>pocket</fullName>
            </value>
            <value>
                <fullName>pocket watch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>